*top-right nav now correctly displays behind page head *removed link used to develop hash-based js filtering

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -72,6 +72,7 @@ h1 {
     margin: 0 3%;
     min-width: 600px;
     text-align: right;
+    z-index: -1;
 }
 
 .nav-tab {
